# ceny-app-granzing

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_add_company_fields_to_users.py  0003_add_customers_and_labels.py  0004_add_customer_address_fields.py  0005_add_catalog_tables.py  0006_add_quotes_tables.py  0007_add_tax_pct_to_quotes.py  0008_add_roll_dims_and_gap.py  0009_add_company_fields_to_users.py  0010_add_user_email_configs.py  0011_add_password_reset_tokens.py  0012_add_company_colors_and_conditions.py  0013_add_warranties_table.py  0014_add_purchase_price_to_products.py  0015_add_price_list_items.py  0016_add_sale_type_to_quotes.py  0017_add_vehicle_fields_to_warranties.py  0018_add_unit_pricing_to_products.py  0019_add_unit_fields_to_quote_lines.py  0020_add_unit_pricing_to_price_list_items.py
backend/scripts/: generate_jwt_keys.sh  seed_admin.py
backend/src/centy/application/auth/: commands.py  handlers.py  password_reset_handlers.py
backend/src/centy/application/catalog/: commands.py  handlers.py  queries.py
backend/src/centy/application/customers/: commands.py  handlers.py  queries.py
backend/src/centy/application/email/: commands.py  handlers.py
backend/src/centy/application/ports/: auth.py  cache.py  email.py  repositories.py  storage.py  unit_of_work.py
backend/src/centy/application/pricing/: commands.py  handlers.py  queries.py
backend/src/centy/application/quotes/: commands.py  handlers.py  queries.py
backend/src/centy/application/users/: commands.py  (+2 more)
backend/tests/: conftest.py
backend/tests/unit/application/: test_catalog_handlers.py  test_create_user_handler.py  test_customer_handlers.py  test_customer_label_handlers.py  test_login_handler.py  test_pricing_handlers.py  test_quote_handlers.py  test_update_user_handler.py  test_warranty_handlers.py
backend/tests/unit/domain/: test_catalog_entities.py  test_customer_entity.py  test_money.py  test_quote_entities.py  test_user_entity.py  test_warranty_entity.py
(+129 files in other folders)
