[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centy"
version = "0.1.0"
description = "Glazing Platform — SaaS para instaladores de láminas solares"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.2",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "pg8000>=1.31.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.16.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "python-multipart>=0.0.9",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.150.0",
    "cryptography>=43.0.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "testcontainers[postgresql]>=4.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/centy"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["centy"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["infrastructure/"]

[[tool.mypy.overrides]]
module = "centy.infrastructure.*"
strict = false

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/centy --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["src/centy/infrastructure/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
